<resources>
    <string name="app_name">lenr</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Hello">Hello world</string>
    <string name="image">image</string>
    <string name="height">Height</string>
    <string name="width">Width</string>
    <string name="get_image_data">Get Image Data</string>
    <string name="do_things">Do Things</string>
    <string name="go_back">Go Back</string>
    <string name="send">send</string>
    <string name="set_text">Set Text</string>
    <string name="goservice">Go Service</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="time">Time:</string>
    <string name="check_time">Check TIme</string>
    <string name="stop_check_time">Stop Check TIme</string>
    <string name="notification">notification</string>
</resources>
