<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="0"
    android:orientation="vertical"
    tools:context=".Main">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="7">

        <ImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/image"
            app:srcCompat="@mipmap/cat_background" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/width_lab"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:paddingStart="@dimen/zero_padding"
            android:paddingEnd="@dimen/text_space"
            android:text="@string/width"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/width"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:paddingStart="@dimen/text_space"
            android:paddingEnd="@dimen/zero_padding"
            android:text="@string/app_name"
            android:textSize="@dimen/text_size" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/height_lab"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:paddingStart="@dimen/zero_padding"
            android:paddingEnd="@dimen/text_space"
            android:text="@string/height"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/height"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:paddingStart="@dimen/text_space"
            android:paddingEnd="@dimen/zero_padding"
            android:text="@string/app_name"
            android:textSize="@dimen/text_size" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/imgButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/get_image_data"
                android:textAllCaps="false"
                android:textSize="@dimen/text_size" />

            <Button
                android:id="@+id/dothings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/do_things"
                android:textAllCaps="false"
                android:textSize="@dimen/text_size" />

            <Button
                android:id="@+id/goservice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="goService"
                android:text="@string/goservice"
                android:textAllCaps="false"
                android:textSize="@dimen/text_size" />

            <Button
                android:id="@+id/notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="toNotification"
                android:text="@string/notification"
                android:textAllCaps="false"
                android:textSize="@dimen/text_size" />

        </LinearLayout>
    </TableRow>

</TableLayout>