<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ServiceAc">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/goservice"
        android:textSize="@dimen/big_text" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/timelabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:paddingStart="0sp"
            android:paddingEnd="20sp"
            android:text="@string/time"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="20sp"
            android:paddingEnd="0sp"
            android:textSize="@dimen/text_size" />
    </TableRow>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4" />

    <Button
        android:id="@+id/checktime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="checkTime"
        android:text="@string/check_time"
        android:textAllCaps="true"
        android:textSize="@dimen/text_size" />

    <Button
        android:id="@+id/doservice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="doService"
        android:text="@string/start_service"
        android:textSize="@dimen/text_size" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />
</LinearLayout>